updates(container): edits padding to correct alignment issue

--- a/styles/grid/container.sass
+++ b/styles/grid/container.sass
@@ -5,13 +5,15 @@
 @mixin container
   @include desktop
     max-width: $max-width
+  @include tablet
+    padding: 0 2rem
   @include phone-lg
     padding: 0 1rem
   display: flex
   position: relative
   flex-wrap: wrap
   margin: 0 auto
-  padding: 0 calc(#{$outside-gutter} / 2)
+  padding: 0 calc((#{$outside-gutter} / 2) - #{$gutter / 2})
   width: 100%
   max-width: calc(#{$width} + #{$outside-gutter})
 
